--- a/index.html
+++ b/index.html
@@ -73,8 +73,14 @@
                   >Register your interest</a
                 >
               </div>
-              <div class="mt-10 flex items-center justify-center gap-x-6 text-white">
-                <a href="#">Github</a> · <a href="https://discord.com/invite/z2PT65jKqQ/">Discord</a>
+              <div
+                class="mt-10 flex items-center justify-center gap-x-6 text-white mb-3"
+              >
+                <a href="#">Github</a> ·
+                <a href="https://discord.com/invite/z2PT65jKqQ/">Discord</a>
+              </div>
+              <div class="text-center">
+                <img src="images/co-owned-ai.png" class="place-self-center" />
               </div>
             </div>
           </div>
