adds github link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <div
                 class="mt-10 flex items-center justify-center gap-x-6 text-white mb-3"
               >
-                <a href="#">Github</a> ·
+                <a href="https://github.com/valory-xyz/awesome-co-owned-ai">Github</a> ·
                 <a href="https://discord.com/invite/z2PT65jKqQ/">Discord</a>
               </div>
               <div class="text-center">
