adds youtube vid

--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
               <div
                 class="mt-10 flex items-center justify-center gap-x-6 text-white mb-3"
               >
-                <a href="https://github.com/valory-xyz/awesome-co-owned-ai">Github</a> ·
+                <a href="https://github.com/valory-xyz/awesome-co-owned-ai"
+                  >Github</a
+                >
+                ·
                 <a href="https://discord.com/invite/z2PT65jKqQ/">Discord</a>
               </div>
               <div class="text-center">
@@ -113,6 +116,17 @@
           </div>
         </div>
       </main>
+    </div>
+    <div class="place-content-center">
+      <iframe
+        width="100%"
+        height="839"
+        src="https://www.youtube.com/embed/bmBnv2g-mR8"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
     </div>
     <div class="place-content-center">
       <iframe
