Remove button, add lead text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               sans: ["Manrope"],
             },
             colors: {
-              clifford: "#da373d",
+              clifford: "#da373d"
             },
           },
         },
@@ -67,11 +67,7 @@
                 Co-owned AI
               </h1>
               <div class="mt-10 flex items-center justify-center gap-x-6">
-                <a
-                  href="https://j710ba8jv70.typeform.com/to/IU62exCX"
-                  class="rounded-md bg-green-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-green-300 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-                  >Register your interest</a
-                >
+                <p class="text-lg text-white">This vision is being driven by <a href="https://valory.xyz/" class="text-purple-500">Valory</a> and realized by <a href="https://olas.network/" class="text-purple-500">Olas</a>.</p>
               </div>
               <div
                 class="mt-10 flex items-center justify-center gap-x-6 text-white mb-3"
