undo comma change

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               sans: ["Manrope"],
             },
             colors: {
-              clifford: "#da373d"
+              clifford: "#da373d",
             },
           },
         },
